Marco de proyectos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
     <body>
         <div class="contenedor-header">
-            <header>
+            <!-- <header>
 
                 <div class="logo">
                     <img src="" alt="">
@@ -28,11 +28,15 @@
                 <div class="nav-responsive">
                     <i class="fa-solid fa-bars"></i>
                 </div>
-            </header>
+            </header> -->
         </div>
         <!-- EL INICIO -->
         <section id="inicio" class="inicio">
-
+            <div class="contenido-banner2">
+                <div class="contenedor-img">
+                    <img src="img/servidor-sql.png" alt="" width="550px">
+                </div>
+            </div>
 
 
             <div class="contenido-banner">
@@ -47,10 +51,66 @@
                 </div>
             </div>
 
+            <div class="contenido-banner2">
+                <div class="contenedor-img">
+                    <img src="img/azure.png" alt="" width="550px">
+                </div>
+            </div>
+            <!-- Proyectos -->
 
+        <div class="wrapper">
+            <div class="cols">
+                    <div class="col" ontouchstart="this.classList.toggle('hover');">
+                        <div class="container">
+                            <div class="front" style="background-image: url()">
+                                <div class="inner">
+                                    <p>Proyecto 1</p>
+                                    <span>API</span>
+                                </div>
+                            </div>
+                            <div class="back">
+                                <div class="inner">
+                                <p>ISS</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col" ontouchstart="this.classList.toggle('hover');">
+                        <div class="container">
+                            <div class="front" style="background-image: url(2.jpeg)">
+                                <div class="inner">
+                                    <p>Proyecto 2</p>
+                                        <span>MVC</span>
+                                </div>
+                            </div>
+                            <div class="back">
+                                <div class="inner">
+                                <p>Azure</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col" ontouchstart="this.classList.toggle('hover');">
+                        <div class="container">
+                            <div class="front" style="background-image: url(2.jpeg)">
+                                <div class="inner">
+                                    <p>Proyecto 3</p>
+                                        <span>Sistema de ventas</span>
+                                </div>
+                            </div>
+                            <div class="back">
+                                <div class="inner">
+                                <p>Completo</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </div>
 
-            
+        <!-- Fin Proyectos -->
         </section>
+        
         <!-- SECCION SOBRE MI -->
         <section id="sobremi" class="sobremi">
             <div class="contenido-seccion">
@@ -69,10 +129,6 @@
                                 <strong>Ubicación</strong>
                                 Argentina, Ciudad Autonoma de Buenos Aires.
                             </li>
-                            <!-- <li>
-                                <strong>Web Site</strong>
-                                <a href="http://uxwith.com/">uxwith.com</a>
-                            </li> -->
                         </ul>
                     </div>
                     <!-- Tecnologias -->
