--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="col" ontouchstart="this.classList.toggle('hover');">
                         <div class="container">
-                            <div class="front" style="background-image: url(2.jpeg)">
+                            <div class="front" style="background-image: url()">
                                 <div class="inner">
                                     <p>Proyecto 2</p>
                                         <span>MVC</span>
@@ -92,7 +92,7 @@
                     </div>
                     <div class="col" ontouchstart="this.classList.toggle('hover');">
                         <div class="container">
-                            <div class="front" style="background-image: url(2.jpeg)">
+                            <div class="front" style="background-image: url()">
                                 <div class="inner">
                                     <p>Proyecto 3</p>
                                         <span>Sistema de ventas</span>
