--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
             <div class="cols">
                     <div class="col" ontouchstart="this.classList.toggle('hover');">
                         <div class="container">
-                            <div class="front" style="background-image: url()">
+                            <div class="front" style="background-image: url(img/api.png)">
                                 <div class="inner">
                                     <p>Proyecto 1</p>
                                     <span>API</span>
                                 </div>
                             </div>
-                            <div class="back">
+                            <div class="back" ">
                                 <div class="inner">
                                 <p>ISS</p>
                                 </div>
@@ -77,7 +77,7 @@
                     </div>
                     <div class="col" ontouchstart="this.classList.toggle('hover');">
                         <div class="container">
-                            <div class="front" style="background-image: url()">
+                            <div class="front" style="background-image: url(img/asp.netCoreMVC.png)">
                                 <div class="inner">
                                     <p>Proyecto 2</p>
                                         <span>MVC</span>
@@ -92,7 +92,7 @@
                     </div>
                     <div class="col" ontouchstart="this.classList.toggle('hover');">
                         <div class="container">
-                            <div class="front" style="background-image: url()">
+                            <div class="front" style="background-image: url(img/C.png)">
                                 <div class="inner">
                                     <p>Proyecto 3</p>
                                         <span>Sistema de ventas</span>
