--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <section id="sobremi" class="sobremi">
             <div class="contenido-seccion">
                 <h2>Sobre Mi</h2>
-                <p><span>Programador Full Stack .Net</span> Tecnico Electronico con bases en C, y C++. Busco enseñar cosas complejas de forma muy faciles de conceptualizar. Este subiendo los Proyectos mas relevantes aqui mismo. Muchas Gracias por su tiempo.</p>
+                <p><span>Programador Full Stack .Net</span> Tecnico Electronico con bases en C y C++. Busco enseñar cosas complejas de forma muy facil de conceptualizar. Estare subiendo los Proyectos mas relevantes aqui mismo. Muchas Gracias por su tiempo.</p>
                 <div class="fila">
                     <!-- datos personales -->
                     <div class="col">
