--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <img src="img/ok.jpeg" alt="" width="550px">
                 </div>
                 <h1>Nicolas Romano</h1>
-                <h2>Full Stack .Net Jr</h2>
+                <h2>Desarrollador .Net</h2>
                 <div class="redes">
                     <a href="https://github.com/Nyko060" target="_blank"><i class="fa-brands fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/nyko060/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
